--- a/public/index.html
+++ b/public/index.html
@@ -14,5 +14,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-app.js"></script>
   </body>
 </html>
